# redasql

./: .envrc.sample  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python_publish.yml  unittest.yml
ci/: docker-compose.10.0.0.b50363.yml  docker-compose.8.0.2.b37747.yml  docker-compose.9.0.0-beta.b49509.yml  docker-compose.yml
ci/cli/: __init__.py  test_clit.py  utils.py
ci/docker/v10.0.0.b50363/: docker-compose.yml  init.sql
ci/resource/: init.sql  init_for_9.0.0-beta.b49509.sql
redasql/: __version__.py  api_client.py  command.py  completer.py  constants.py  dto.py  exceptions.py  metacommand_executor.py  result_formatter.py  result_outputter.py  utils.py
tests/cli/: test_cli.py  test_clit.py  test_rcfile.py  test_result_formatter.py  utils.py
tests/cli/data/: test.sql  testrc
tests/docker/v10.0.0.b50363/: init.sql  redash.env
tests/docker/v10.1.0.b50633/: docker-compose.yml
tests/docker/v8.0.2.b37747/: docker-compose.yml
tests/docker/v9.0.0-beta.b49509/: docker-compose.yml  init.sql
