[tool.poetry]
name = "redasql"
version = "0.1.0.1"
description = ""
authors = ["denzow <denzow@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/denzow/redasql"
repository = "https://github.com/denzow/redasql"
keywords = ["redash", "sql"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
prettytable = "^2.2.0"
prompt-toolkit = "^3.0.20"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
redasql = 'redasql.command:main'
